--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "stimulus": "^1.1.1",
-    "@popperjs/core": "^2.5.3"
+    "@popperjs/core": "^2.5.3",
+    "focus-visible": "^5.2.0",
+    "stimulus": "^1.1.1"
   },
   "devDependencies": {
     "@11ty/eleventy": "^0.11.0",
